engine/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completed_turn_clears_visible_running_hook.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before completion:\\n{before_completion}\\nafter completion:\\n{}\",\nhook_status_frame(&chat, 80))"
---
before completion:
"                                                                                "
"• Working (0s • esc to interrupt) · Running hook                                "
"                                                                                "
"                                                                                "
"› Ask Hexa to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
after completion:
"                                                                                "
"                                                                                "
"› Ask Hexa to do anything                                                      "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                                            "
